nl/node-netfilter.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = "add",
        peg$c2 = { type: "literal", value: "add", description: "\"add\"" },
        peg$c3 = "del",
        peg$c4 = { type: "literal", value: "del", description: "\"del\"" },
        peg$c5 = function(op) { return "command : " + op; },
        peg$c6 = "ip6",
        peg$c7 = { type: "literal", value: "ip6", description: "\"ip6\"" },
        peg$c8 = "ip",
        peg$c9 = { type: "literal", value: "ip", description: "\"ip\"" },
        peg$c10 = function(family) {
        			console.log("family")
        			ipfamily = family; return "family : " + family;
        		},
        peg$c11 = "rule",
        peg$c12 = { type: "literal", value: "rule", description: "\"rule\"" },
        peg$c13 = function(ct) { return "type : " + ct; },
        peg$c14 = function(ce) { return ce; },
        peg$c15 = [],
        peg$c16 = function(pt, ctr, act) {
        			var exprs = [];

        			exprs.push(pt[0]);
        			exprs.push(pt[1]);

        			for ( var i = 0; i < ctr.length; i++ )
        			{
        				var fld = ctr[i].field;
        				var val = ctr[i].value;

        				exprs.push(fld);

        				if(val.type === 'address') {
        					exprs.push(val.value[1]); // mask as bitwise
        					exprs.push(val.value[0]); // address as value
        				} else if(val.type === 'number') {
        					exprs.push(val.value[0]); // the value
        				}
        			}

        			exprs.push(act);

        			return exprs;
        		},
        peg$c17 = function(fd, vl) {
        			// console.dir(protocol);
        			// console.dir(field);
        			// console.dir(value);
        			return { field : fd , value : vl };
        		},
        peg$c18 = /^[a-zA-Z]/,
        peg$c19 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c20 = function(table) {
        			return table.join("");
        		},
        peg$c21 = function(chain) {
        			return chain.join("");
        		},
        peg$c22 = function(val) { return val; },
        peg$c23 = function(ip) {
        		return ip;
        	},
        peg$c24 = function(addr, cd) {
        			return {
        				type: "address",
        				value: [ addr,	cd ]
        			};
        		},
        peg$c25 = "drop",
        peg$c26 = { type: "literal", value: "drop", description: "\"drop\"" },
        peg$c27 = function() {
        	        return {
        	            elem:
        	            {
        					name: "immediate",
        					data: {
        						DREG: 		nft.nft_registers.NFT_REG_VERDICT,
        						DATA: 		{ VERDICT: { CODE: 0x00000000 } }
        	                }
        				}
        			};
        		},
        peg$c28 = "accept",
        peg$c29 = { type: "literal", value: "accept", description: "\"accept\"" },
        peg$c30 = function() {
        	        return {
        	            elem:
        	            {
        					name: "immediate",
        					data: {
        						DREG: 		nft.nft_registers.NFT_REG_VERDICT,
        						DATA: 		{ VERDICT: { CODE: 0x00000001 } }
        	                }
        				}
        			};
        		},
        peg$c31 = function(prot) { console.log("protocol");
        			return [
        			{
        				elem:
        				{
        					name: "payload",
        					data: {
        						DREG: 		nft.nft_registers.NFT_REG_1,
        						BASE: 		nft.nft_payload_bases.NFT_PAYLOAD_NETWORK_HEADER,
        						OFFSET: 	nft.iphdr_offsets.protocol,
        						LEN: 		nft.iphdr_sizes.protocol
        	                }
        	            }
        	        },
        	        {
        	            elem:
        	            {
        					name: "cmp",
        					data: {
        						SREG: 		nft.nft_registers.NFT_REG_1,
        						OP:			nft.nft_cmp_ops.NFT_CMP_EQ,
        						DATA: 		{ VALUE: prot } //nft.ip_proto.IPPROTO_TCP
        	                }
        				}
        			}];

        			return prot;
        		},
        peg$c32 = function(field) {console.log("field");
        			payload_len = field.len;
        			return {
        				elem:
        				{
        					name: "payload",
        					data: {
        						DREG: 		nft.nft_registers.NFT_REG_1,
        						BASE: 		nft.nft_payload_bases.NFT_PAYLOAD_TRANSPORT_HEADER,
        						OFFSET: 	field.offset,
        						LEN:		field.len
        	                }
        	            }
        	        };
        		},
        peg$c33 = function(num) {console.log("number");
        		var prepend = "";
        		var numstr = num.toString(16);
        		var pad = payload_len * 2;
        		while(numstr.length < pad) numstr = "0".concat(numstr);

        		payload_len
        	        return {
        	        	type: "number",
        	        	value : [
        			        {
        			            elem:
        			            {
        							name: "cmp",
        							data: {
        								SREG: 		nft.nft_registers.NFT_REG_1,
        								OP: 		nft.nft_cmp_ops.NFT_CMP_EQ,
        								DATA: 		{ VALUE: "0x" + numstr } // 0x0016 = 22 - ssh protocol
        			                }
        						}
        					}
        				]
        			};
        		},
        peg$c34 = function(quads) { console.log("ipv6addr");
        			if(ipfamily !== 'ip6') throw new Error("family != ip6 when ipv6 address detected")
        			return {
        	            elem:
        	            {
        					name: "cmp",
        					data: {
        						SREG: 		nft.nft_registers.NFT_REG_1,
        						OP: 		nft.nft_cmp_ops.NFT_CMP_EQ,
        						DATA: 		{
        										// overkill but throws for bad hex val
        										VALUE: "0x" + quads
        									} // C0A83800 = 192.168.56.0
        	                }
        				}
        			};
        		},
        peg$c35 = function(octets) {  console.log("ipv4addr");
        			if(ipfamily !== 'ip') throw new Error("family != ip when ip address detected")
        			var addr = new Buffer(4);
        			addr.writeUInt8( parseInt(octets[0], 10), 0);
        			addr.writeUInt8( parseInt(octets[1], 10), 1);
        			addr.writeUInt8( parseInt(octets[2], 10), 2);
        			addr.writeUInt8( parseInt(octets[3], 10), 3);
        			return {
        	            elem:
        	            {
        					name: "cmp",
        					data: {
        						SREG: 		nft.nft_registers.NFT_REG_1,
        						OP: 		nft.nft_cmp_ops.NFT_CMP_EQ,
        						DATA: 		{
        										// overkill but throws for bad hex val
        										VALUE: "0x" + addr.toString('hex')
        									} // C0A83800 = 192.168.56.0
        	                }
        				}
        			};
        		},
        peg$c36 = function(cidr) {   console.log("cidr")
        			return {
        	            elem:
        	            {
        					name: "bitwise",
        					data: {
        						SREG: 		nft.nft_registers.NFT_REG_1,
        						DREG:		nft.nft_registers.NFT_REG_1,
        						LEN: 		cidr.len,
        						MASK: 		{ VALUE: "0x" + cidr.val },
        						XOR: 		{ VALUE: "0x00000000" }
        	                }
        				}
        			}
        		},
        peg$c37 = "/",
        peg$c38 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c39 = /^[0-9]/,
        peg$c40 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c41 = null,
        peg$c42 = function(cd) {
        			var cidrv  = parseInt(cd.join(""), 10);
        			return {
        				val: cmn.maskFromCidr(cidrv, 'inet6'),
        				len: 16
        			};
        		},
        peg$c43 = function(cd) {
        			var cidrv  = parseInt(cd.join(""), 10);
        			return {
        				val: cmn.maskFromCidr(cidrv, 'inet'),
        				len: 4
        			};
        		},
        peg$c44 = ".",
        peg$c45 = { type: "literal", value: ".", description: "\".\"" },
        peg$c46 = function(oct1, oct2, oct3, oct4) {
        			return [ oct1.join(""), oct2.join(""), oct3.join(""), oct4.join("") ];
        		},
        peg$c47 = function(st, nx) {
        			var buf = new Buffer(16);
        			buf.fill(0);
        			var sindex = 0;
        			var written = 0;

        			if(st != undefined) {
        				var val = parseInt(st, 16);
        				buf.writeUInt16BE(val, sindex, 2);
        				written++;
        				sindex += 2;
        			}

        			for(var i = 0; i < nx.length; i++) {
        				if(nx[i].skip == true) {
        					sindex = (8 - (nx.length - written + 1)) * 2;
        				}
        				val = parseInt(nx[i].val, 16);
        				buf.writeUInt16BE(val, sindex, 2);
        				sindex += 2;
        				written++;
        			}

        			return buf.toString('hex');
        		},
        peg$c48 = /^[0-9a-fA-F]/,
        peg$c49 = { type: "class", value: "[0-9a-fA-F]", description: "[0-9a-fA-F]" },
        peg$c50 = function(q) { val: return q.join(""); },
        peg$c51 = function(q) { return q; },
        peg$c52 = ":",
        peg$c53 = { type: "literal", value: ":", description: "\":\"" },
        peg$c54 = function(q) { return { skip: false, val: q.join("") }; },
        peg$c55 = "::",
        peg$c56 = { type: "literal", value: "::", description: "\"::\"" },
        peg$c57 = function(q) { return { skip: true, val: q.join("") }; },
        peg$c58 = "0x",
        peg$c59 = { type: "literal", value: "0x", description: "\"0x\"" },
        peg$c60 = function(nibbles) { return parseInt(nibbles.join(""), 16); },
        peg$c61 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c62 = /^[ \t]/,
        peg$c63 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c64 = "tcp",
        peg$c65 = { type: "literal", value: "tcp", description: "\"tcp\"" },
        peg$c66 = function() { return "0x06"; },
        peg$c67 = "udp",
        peg$c68 = { type: "literal", value: "udp", description: "\"udp\"" },
        peg$c69 = function() { return "0x11"; },
        peg$c70 = "prot",
        peg$c71 = { type: "literal", value: "prot", description: "\"prot\"" },
        peg$c72 = function() {
        		return {
        			offset: 	nft.iphdr_offsets.protocol,
        			len:		nft.iphdr_sizes.protocol
        		};
        	},
        peg$c73 = "saddr",
        peg$c74 = { type: "literal", value: "saddr", description: "\"saddr\"" },
        peg$c75 = function() {
        		if(ipfamily === 'ip'){
        			return {
        				offset: 	nft.iphdr_offsets.saddr,
        				len:		nft.iphdr_sizes.saddr
        			};
        		} else {
        			return {
        				offset: 	nft.ipv6hdr_offsets.saddr,
        				len:		nft.ipv6hdr_sizes.saddr
        			};
        		}
        	},
        peg$c76 = "daddr",
        peg$c77 = { type: "literal", value: "daddr", description: "\"daddr\"" },
        peg$c78 = function() {
        		if(ipfamily === 'ip'){
        			return {
        				offset: 	nft.iphdr_offsets.daddr,
        				len:		nft.iphdr_sizes.daddr
        			};
        		} else {
        			return {
        				offset: 	nft.ipv6hdr_offsets.daddr,
        				len:		nft.ipv6hdr_sizes.daddr
        			};
        		}
        	},
        peg$c79 = "dport",
        peg$c80 = { type: "literal", value: "dport", description: "\"dport\"" },
        peg$c81 = function() {
        		return {
        			offset: 	nft.tcphdr_offsets.dest,
        			len:		nft.tcphdr_sizes.dest
        		};
        	},
        peg$c82 = "sport",
        peg$c83 = { type: "literal", value: "sport", description: "\"sport\"" },
        peg$c84 = function() {
        		return {
        			offset: 	nft.tcphdr_offsets.source,
        			len:		nft.tcphdr_sizes.source
        		};
        	},

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parsecommand();

      return s0;
    }

    function peg$parsecommand() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseoperation();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsecommand_type();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsefamily();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsecommand_expression();
            if (s4 !== peg$FAILED) {
              s1 = [s1, s2, s3, s4];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseoperation() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 3) === peg$c3) {
          s1 = peg$c3;
          peg$currPos += 3;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c5(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsefamily() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c6) {
        s1 = peg$c6;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c8) {
          s1 = peg$c8;
          peg$currPos += 2;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c10(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsecommand_type() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c11) {
        s1 = peg$c11;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c13(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsecommand_expression() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parserule_expression();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c14(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parserule_expression() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parsetable();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsechain();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseprotocol();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsecriteria();
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parsecriteria();
              }
            } else {
              s4 = peg$c0;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseaction();
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c16(s3, s4, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsecriteria() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsefield();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsevalue();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c17(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetable() {
      var s0, s1, s2;
